--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-USER=lmtacademytut@gmail.com
-PASS=https://lmt-academy.herokuapp.com
+USER=lmtofficialtut@gmail.com
+PASS=https://lmt-academy.herokuapp.com/
